FIX terra button text overflow

--- a/src/app/button/terra-button.component.scss
+++ b/src/app/button/terra-button.component.scss
@@ -44,6 +44,9 @@ button.close
     -ms-user-select: none;
     user-select: none;
     border: 0;
+    text-overflow: ellipsis;
+    width: 100%;
+    overflow: hidden;
     @include button-size($btn-padding-y, $btn-padding-x, $font-size-base, $btn-border-radius);
     @include transition(all .2s ease-in-out);
     @include button-variant($gray-dark, $gray-light-3, transparent);
